--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
   <link rel="icon" type="image/svg+xml" href="assets/images/favicon.svg">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#ff9f00">
-  <!-- Google Analytics - Replace G-XXXXXXXXXX with your GA4 Measurement ID -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <!-- Google Analytics - Replace G-68HP6VR0T6 with your GA4 Measurement ID -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-68HP6VR0T6"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX');
+    gtag('config', 'G-68HP6VR0T6');
   </script>
   <!-- Structured Data -->
   <script type="application/ld+json">
