--- a/404.html
+++ b/404.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="assets/css/base.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
+    * { cursor: auto !important; }
+
     body {
       margin: 0;
       min-height: 100vh;
